--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.6",
+    "sass-loader": "^14.2.1",
+    "scrollreveal": "^4.0.9",
+    "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
