--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "walid-portfolio",
   "version": "0.1.0",
-  "homepage": "https://walidabed00.github.io/walid-portfolio",
+  "homepage": "https://walidabed00.github.io/arcanovate",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
